change the url of border images

--- a/style/ancient.css
+++ b/style/ancient.css
@@ -5,7 +5,7 @@
 
   body{
                 border: 125px solid transparent;
-                border-image-source: url(left_border.png);
+                border-image-source: url(../images/left_border.png);
                 border-image-slice: 0 0 0 200; 
                 border-image-repeat: repeat;
                 margin-top: -125px;
@@ -62,7 +62,7 @@ figcaption{
 
 main p{
 	border: 125px solid transparent;
-    border-image-source: url(border.png);
+    border-image-source: url(../images/border.png);
 	border-image-slice: 0 0 200 0; 
 	border-image-repeat: repeat;
 	padding-bottom: 5%;
