--- a/style/XIXcenturystyle.css
+++ b/style/XIXcenturystyle.css
@@ -4,10 +4,10 @@
 @import url('https://fonts.googleapis.com/css?family=Abril+Fatface&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Ewert&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Ewert|Federo&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Sancreek&display=swap');
+ @import url('https://fonts.googleapis.com/css?family=Sancreek&display=swap');
 
 body {
-  background-image: url("background10.jpg");
+  background-image: url("images/background10.jpg");
   background-size: contain;
       margin-right: 5%;
   margin-left: 5%;
@@ -20,7 +20,7 @@ body::after {
   width: 100%;
   height: 50%;
   background-repeat: no-repeat;
-  background-image: url(adscolormodified.jpg);
+  background-image: url(images/adscolormodified.jpg);
   background-position: center;
   margin-top: -10px;
   margin-bottom: -130px;
@@ -33,7 +33,7 @@ header::before {
   width: 100%;
   height: 50%;
   background-repeat: no-repeat;
-  background-image: url(resized5.png);
+  background-image: url(images/resized5.png);
   background-position: center;
   margin-top: -180px;
   margin-bottom: -130px;
@@ -53,7 +53,7 @@ header::after {
   width: 100%;
   height: 50%;
   background-repeat: no-repeat;
-  background-image: url(resized5inverted.png);
+  background-image: url(images/resized5inverted.png);
   background-position: center;
   margin-top: -130px;
   margin-bottom: -150px;
@@ -80,7 +80,7 @@ h1::after {
   display: block;
   width: 100%;
   height: 45%;
-  background-image: url(dottedonlineeditor.png);
+  background-image: url(images/dottedonlineeditor.png);
   background-repeat: no-repeat;
   background-position: center;
   margin-top: -145px;
@@ -104,7 +104,7 @@ h2::after {
   display: block;
   width: 100%;
   height: 45%;
-  background-image: url(dottedonlineeditor.png);
+  background-image: url(images/dottedonlineeditor.png);
   background-repeat: no-repeat;
   background-position: center;
   margin-top: -145px;
@@ -130,7 +130,7 @@ h3::after {
   display: block;
   width: 100%;
   height: 45%;
-  background-image: url(dottedonlineeditor.png);
+  background-image: url(images/dottedonlineeditor.png);
   background-repeat: no-repeat;
   background-position: center;
   margin-top: -145px;
@@ -167,7 +167,7 @@ main {
 img {
    padding:1px;
    border:1px solid #021a40;
-	 max-width: 75%; 
+	 max-width: 65%; 
 	 display:block; 
 	 height: auto;   
 	 margin: 0 auto;
@@ -193,7 +193,7 @@ figure::before {
   display: block;
   width: 100%;
   height: 5%;
-  background-image: url(oneballless.png);
+  background-image: url(images/oneballless.png);
   background-repeat: no-repeat;
   background-position: center;
 
@@ -206,7 +206,7 @@ figure::after {
   display: block;
   width: 100%;
   height: 5%;
-  background-image: url(oneballless.png);
+  background-image: url(images/oneballless.png);
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -258,308 +258,9 @@ h5 {
 q {  
   font-family: 'Jacques Francois', serif;
   font-size:1.3vw;
-  font-style: italic;
+    font-style: italic;
 }
 
 
-footer {    
-	font-style: italic;
-}
-
-/*
-@media (max-width: 900px) { /* to be applied if the screen is between 0 and 900 
-  body:after {
-    height: 20%;
-  }
-  h1 {
-    font-size: 2.3rem;
-  }
-  h2 {
-    font-size: 1.6rem;
-  }
-  h3 {
-    font-size: 1.2rem;
-  }
-  h4 {
-  font-size: 1rem;
-  }
-  figure:before {
-    padding-top: 8%;
-  }
-  figure:after {
-    padding-top: 16%;
-  }
-  figure > figcaption {
-    padding: 2% 0 0 0;
-    font-size: 0.7rem;
-  }
-  figure > img {
-    max-height: 30%;
-  }
-  figure > video {
-    max-height: 30%;
-  }
-  figure > table {
-    margin: 5% auto;
-  }
-  ol {
-    margin: 0 0 5% 0;
-}
-  footer {
-    padding: 5% 0;
-  }
-  footer:before {
-    margin: 0 0 5% 0;
-    padding-top: 15%;
-  }
-  header:before {
-    width: 80vw;
-    margin-top: -30%;
-    margin-bottom: -130px;
-  }
-  header:after {
-    width: 80vw;
-    margin-top: -21%;
-    padding-top: -15vmin;
-  }
-  figure:before {
-    width: 30vw;
-    margin: 0;
-  }
-  figure:after {
-    width: 30vw;
-    margin: 0;
-  }
-}
-
-@media (max-width: 400px) { /* to be applied if the screen is between 0 and 400 
-  body:after {
-    height: 20%;
-  }
-  h1 {
-    font-size: 1.7rem;
-  }
-  h2 {
-    font-size: 1.3rem;
-  }
-  h3 {
-    font-size: 1rem;
-  }
-  h4 {
-  font-size: 0.5rem;
-  }
-  figure:before {
-    padding-top: 8%;
-  }
-  figure:after {
-    padding-top: 16%;
-  }
-  figure > figcaption {
-    padding: 2% 0 0 0;
-    font-size: 0.4rem;
-  }
-  figure > img {
-    max-height: 30%;
-  }
-  figure > video {
-    max-height: 30%;
-  }
-  figure > table {
-    margin: 5% auto;
-  }
-  ol {
-    margin: 0 0 5% 0;
-}
-  footer {
-    padding: 5% 0;
-  }
-  footer:before {
-    margin: 0 0 5% 0;
-    padding-top: 15%;
-  }
-  header:before {
-    width: 80vw;
-    margin-top: -52%;
-    margin-bottom: -130px;
-  }
-  header:after {
-    width: 80vw;
-    margin-top: -48%;
-    padding-top: -15vmin;
-  }
-  figure:before {
-    width: 12vw;
-    margin: 0;
-  }
-  figure:after {
-    width: 12vw;
-    margin: 0;
-  }
-}
-
-@media (max-width: 600px) { /* to be applied if the screen is between 0 and 600 
-  body:after {
-    height: 20%;
-  }
-  h1 {
-    font-size: 1.7rem;
-  }
-  h2 {
-    font-size: 1.3rem;
-  }
-  h3 {
-    font-size: 1rem;
-  }
-  h4 {
-  font-size: 0.5rem;
-  }
-  figure:before {
-    padding-top: 8%;
-  }
-  figure:after {
-    padding-top: 16%;
-  }
-  figure > figcaption {
-    padding: 2% 0 0 0;
-    font-size: 0.4rem;
-  }
-  figure > img {
-    max-height: 30%;
-  }
-  figure > video {
-    max-height: 30%;
-  }
-  figure > table {
-    margin: 5% auto;
-  }
-  ol {
-    margin: 0 0 5% 0;
-}
-  footer {
-    padding: 5% 0;
-  }
-  footer:before {
-    margin: 0 0 5% 0;
-    padding-top: 15%;
-  }
-  header:before {
-    width: 80vw;
-    margin-top: -42%;
-    margin-bottom: -130px;
-  }
-  header:after {
-    width: 80vw;
-    margin-top: -35%;
-    padding-top: -15vmin;
-  }
-  figure:before {
-    width: 20vw;
-    margin: 0;
-  }
-  figure:after {
-    width: 12vw;
-    margin: 0;
-  }
-}
-
-
-@media (min-width: 1600px) { /* at least 1600 for this rule to be applied 
-    h1 {
-        font-size: 6.2rem;
-    }
-    h2 {
-      font-size: 5.3rem;
-    }
-    h3 {
-      font-size: 4rem;
-      }
-    h4 {font-size: 2rem;}
-
-  table{font-size:1em;}
-     section {
-     font-size:0.8em;
-     column-count:2;}
-     img {width:100%;
-     height: auto;}
-      figcaption {font-size: 0.7em;
-        }
-           span {font-size: 0.8em;}
-}
-*/
-
-/* Desktops and laptops ----------- */
-@media only screen 
-and (min-width : 1224px) {
-  body:after {
-    height: 20%;
-  }
-  h1 {
-    font-size: 6rem;
-  }
-  h2 {
-    font-size: 4.5rem;
-  }
-  h3 {
-    font-size: 3rem;
-  }
-   h4 {
-    font-size: 1.5rem;
-  }
-  figure:before {
-    padding-top: 10%;
-  }
-  figure:after {
-    padding-top: 10%;
-  }
-  figure > figcaption {
-    padding: 2% 0 0 0;
-  }
-  figure > img {
-    max-height: 30%;
-  }
-  figure > video {
-    max-height: 30%;
-  }
-  figure > table {
-    margin: 5% auto;
-  }
-  ol {
-    margin: 0 0 5% 0;
-}
-  footer {
-    padding: 5% 0;
-  }
-  footer:before {
-    margin: 0 0 5% 0;
-    padding-top: 15%;
-  }
-  header:before {
-    width: 100%;
-    margin: 0;
-    margin-top: -15%;
-    margin-bottom: -13%;
-
-  }
-  header:after {
-    width: 100%;
-    margin: 0;
-    margin-top: -12%;
-    margin-bottom: -13%;
-
-
-  }
-  figure:before {
-    width: 37vw;
-    margin: 0;
-  }
-  figure:after {
-    width: 37vw;
-    margin: 0;
-  }
-}
-
-/* Large screens ----------- */
-@media only screen 
-and (min-width : 1824px) {
-/* Styles */
+footer {    font-style: italic;
 }
