--- a/style/XIXcenturystyle.css
+++ b/style/XIXcenturystyle.css
@@ -7,7 +7,7 @@
 @import url('https://fonts.googleapis.com/css?family=Sancreek&display=swap');
 
 body {
-  background-image: url("../images/background10.jpg");
+  background-image: url("background10.jpg");
   background-size: contain;
       margin-right: 5%;
   margin-left: 5%;
@@ -20,7 +20,7 @@ body::after {
   width: 100%;
   height: 50%;
   background-repeat: no-repeat;
-  background-image: url(../images/adscolormodified.jpg);
+  background-image: url(adscolormodified.jpg);
   background-position: center;
   margin-top: -10px;
   margin-bottom: -130px;
@@ -33,7 +33,7 @@ header::before {
   width: 100%;
   height: 50%;
   background-repeat: no-repeat;
-  background-image: url(../images/resized5.png);
+  background-image: url(resized5.png);
   background-position: center;
   margin-top: -180px;
   margin-bottom: -130px;
@@ -53,7 +53,7 @@ header::after {
   width: 100%;
   height: 50%;
   background-repeat: no-repeat;
-  background-image: url(../images/resized5inverted.png);
+  background-image: url(resized5inverted.png);
   background-position: center;
   margin-top: -130px;
   margin-bottom: -150px;
@@ -80,7 +80,7 @@ h1::after {
   display: block;
   width: 100%;
   height: 45%;
-  background-image: url(../images/dottedonlineeditor.png);
+  background-image: url(dottedonlineeditor.png);
   background-repeat: no-repeat;
   background-position: center;
   margin-top: -145px;
@@ -104,7 +104,7 @@ h2::after {
   display: block;
   width: 100%;
   height: 45%;
-  background-image: url(../images/dottedonlineeditor.png);
+  background-image: url(dottedonlineeditor.png);
   background-repeat: no-repeat;
   background-position: center;
   margin-top: -145px;
@@ -130,7 +130,7 @@ h3::after {
   display: block;
   width: 100%;
   height: 45%;
-  background-image: url(../images/dottedonlineeditor.png);
+  background-image: url(dottedonlineeditor.png);
   background-repeat: no-repeat;
   background-position: center;
   margin-top: -145px;
@@ -315,7 +315,7 @@ footer {
   header:before {
     width: 80vw;
     margin-top: -30%;
-    margin-bottom: -100px;
+    margin-bottom: -130px;
   }
   header:after {
     width: 80vw;
