--- a/style/XIXcenturystyle.css
+++ b/style/XIXcenturystyle.css
@@ -473,8 +473,13 @@ footer {
     h3 {
       font-size: 4rem;
       }
-    h4 {font-size: 2rem;}
-
+    h4 {font-size: 2rem;
+	}
+    header:before {
+    width: 80vw;
+    margin-top: -42%;
+    margin-bottom: -130px;
+  }
   table{font-size:1em;}
      section {
      font-size:0.8em;
