--- a/style/XIXcenturystyle.css
+++ b/style/XIXcenturystyle.css
@@ -20,7 +20,7 @@ body::after {
   width: 100%;
   height: 50%;
   background-repeat: no-repeat;
-  background-image: url(adscolormodified.jpg);
+  background-image: url(../images/adscolormodified.jpg);
   background-position: center;
   margin-top: -10px;
   margin-bottom: -130px;
@@ -33,7 +33,7 @@ header::before {
   width: 100%;
   height: 50%;
   background-repeat: no-repeat;
-  background-image: url(resized5.png);
+  background-image: url(../images/resized5.png);
   background-position: center;
   margin-top: -180px;
   margin-bottom: -130px;
@@ -53,7 +53,7 @@ header::after {
   width: 100%;
   height: 50%;
   background-repeat: no-repeat;
-  background-image: url(resized5inverted.png);
+  background-image: url(../images/resized5inverted.png);
   background-position: center;
   margin-top: -130px;
   margin-bottom: -150px;
@@ -80,7 +80,7 @@ h1::after {
   display: block;
   width: 100%;
   height: 45%;
-  background-image: url(dottedonlineeditor.png);
+  background-image: url(../images/dottedonlineeditor.png);
   background-repeat: no-repeat;
   background-position: center;
   margin-top: -145px;
@@ -104,7 +104,7 @@ h2::after {
   display: block;
   width: 100%;
   height: 45%;
-  background-image: url(dottedonlineeditor.png);
+  background-image: url(../images/dottedonlineeditor.png);
   background-repeat: no-repeat;
   background-position: center;
   margin-top: -145px;
@@ -130,7 +130,7 @@ h3::after {
   display: block;
   width: 100%;
   height: 45%;
-  background-image: url(dottedonlineeditor.png);
+  background-image: url(../images/dottedonlineeditor.png);
   background-repeat: no-repeat;
   background-position: center;
   margin-top: -145px;
@@ -193,7 +193,7 @@ figure::before {
   display: block;
   width: 100%;
   height: 5%;
-  background-image: url(oneballless.png);
+  background-image: url(../images/oneballless.png);
   background-repeat: no-repeat;
   background-position: center;
 
@@ -206,7 +206,7 @@ figure::after {
   display: block;
   width: 100%;
   height: 5%;
-  background-image: url(oneballless.png);
+  background-image: url(../images/oneballless.png);
   background-repeat: no-repeat;
   background-position: center;
 }
