--- a/style/XIXcenturystyle.css
+++ b/style/XIXcenturystyle.css
@@ -462,6 +462,71 @@ footer {
   }
 }
 
+@media (max-width: 1600px) { /* to be applied if the screen is between 0 and 600 */
+  body:after {
+    height: 20%;
+  }
+  h1 {
+    font-size: 1.7rem;
+  }
+  h2 {
+    font-size: 1.3rem;
+  }
+  h3 {
+    font-size: 1rem;
+  }
+  h4 {
+  font-size: 0.5rem;
+  }
+  figure:before {
+    padding-top: 8%;
+  }
+  figure:after {
+    padding-top: 16%;
+  }
+  figure > figcaption {
+    padding: 2% 0 0 0;
+    font-size: 0.4rem;
+  }
+  figure > img {
+    max-height: 30%;
+  }
+  figure > video {
+    max-height: 30%;
+  }
+  figure > table {
+    margin: 5% auto;
+  }
+  ol {
+    margin: 0 0 5% 0;
+}
+  footer {
+    padding: 5% 0;
+  }
+  footer:before {
+    margin: 0 0 5% 0;
+    padding-top: 15%;
+  }
+  header:before {
+    width: 80vw;
+    margin-top: -42%;
+    margin-bottom: -130px;
+  }
+  header:after {
+    width: 80vw;
+    margin-top: -35%;
+    padding-top: -15vmin;
+  }
+  figure:before {
+    width: 20vw;
+    margin: 0;
+  }
+  figure:after {
+    width: 12vw;
+    margin: 0;
+  }
+}
+
 
 @media (min-width: 1600px) { /* at least 1600 for this rule to be applied */ 
     h1 {
@@ -475,11 +540,7 @@ footer {
       }
     h4 {font-size: 2rem;
 	}
-    header:before {
-    width: 80vw;
-    margin-top: -15%;
-    margin-bottom: -130px;
-  }
+
   table{font-size:1em;}
      section {
      font-size:0.8em;
