--- a/style/XIXcenturystyle.css
+++ b/style/XIXcenturystyle.css
@@ -464,7 +464,8 @@ footer {
 
 @media (max-width: 1600px) { /* to be applied if the screen is between 0 and 1600 */
   body:after {
-    height: 100%;
+    height: 80%;
+     width:auto;
   }
   h1 {
     font-size: 1.7rem;
