--- a/style/home.css
+++ b/style/home.css
@@ -2,6 +2,13 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display=swap');
 
+
+@media (min-width: 768px)
+.col-sm-5
+	{
+		margin-left: 150px;
+}
+
 html {
     height: 100%;
 }
