--- a/style/home.css
+++ b/style/home.css
@@ -3,9 +3,7 @@
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display=swap');
 
 
-@media (min-width: 768px)
-.col-sm-5
-	{
+@media (min-width: 768px) .col-sm-5{
 		margin-left: 150px;
 }
 
