--- a/style/XIXcenturystyle.css
+++ b/style/XIXcenturystyle.css
@@ -7,9 +7,9 @@
 @import url('https://fonts.googleapis.com/css?family=Sancreek&display=swap');
 
 body {
-  background-image: url("../images/background10.jpg");
+  background-image: url("images/background10.jpg");
   background-size: contain;
-      margin-right: 5%;
+  margin-right: 5%;
   margin-left: 5%;
 }
 
@@ -17,13 +17,12 @@ body {
 body::after {
   content: "";
   display: block;
-  width: 100%;
+  max-width: 100%;
   height: 50%;
   background-repeat: no-repeat;
-  background-image: url(../images/adscolormodified.jpg);
+  background-image: url(images/adscolormodified.jpg);
   background-position: center;
-  margin-top: -10px;
-  margin-bottom: -130px;
+  margin-top: 1%;
 }
 
 
@@ -33,10 +32,10 @@ header::before {
   width: 100%;
   height: 50%;
   background-repeat: no-repeat;
-  background-image: url(../images/resized5.png);
+  background-image: url(images/resized5.png);
   background-position: center;
-  margin-top: -180px;
-  margin-bottom: -130px;
+  margin-top: -15%;
+  margin-bottom: -13%;
 
 }
 
@@ -53,10 +52,10 @@ header::after {
   width: 100%;
   height: 50%;
   background-repeat: no-repeat;
-  background-image: url(../images/resized5inverted.png);
+  background-image: url(images/resized5inverted.png);
   background-position: center;
-  margin-top: -130px;
-  margin-bottom: -150px;
+  margin-top: -11%;
+  margin-bottom: -12%;
 }
 
 
@@ -80,7 +79,7 @@ h1::after {
   display: block;
   width: 100%;
   height: 45%;
-  background-image: url(../images/dottedonlineeditor.png);
+  background-image: url(images/dottedonlineeditor.png);
   background-repeat: no-repeat;
   background-position: center;
   margin-top: -145px;
@@ -104,7 +103,7 @@ h2::after {
   display: block;
   width: 100%;
   height: 45%;
-  background-image: url(../images/dottedonlineeditor.png);
+  background-image: url(images/dottedonlineeditor.png);
   background-repeat: no-repeat;
   background-position: center;
   margin-top: -145px;
@@ -130,7 +129,7 @@ h3::after {
   display: block;
   width: 100%;
   height: 45%;
-  background-image: url(../images/dottedonlineeditor.png);
+  background-image: url(images/dottedonlineeditor.png);
   background-repeat: no-repeat;
   background-position: center;
   margin-top: -145px;
@@ -193,7 +192,7 @@ figure::before {
   display: block;
   width: 100%;
   height: 5%;
-  background-image: url(../images/oneballless.png);
+  background-image: url(images/oneballless.png);
   background-repeat: no-repeat;
   background-position: center;
 
@@ -206,7 +205,7 @@ figure::after {
   display: block;
   width: 100%;
   height: 5%;
-  background-image: url(../images/oneballless.png);
+  background-image: url(images/oneballless.png);
   background-repeat: no-repeat;
   background-position: center;
 }
