--- a/style/XIXcenturystyle.css
+++ b/style/XIXcenturystyle.css
@@ -7,7 +7,7 @@
 @import url('https://fonts.googleapis.com/css?family=Sancreek&display=swap');
 
 body {
-  background-image: url(../images/background10.jpg);
+  background-image: url("images/background10.jpg");
   background-size: contain;
   margin-right: 5%;
   margin-left: 5%;
@@ -20,7 +20,7 @@ body::after {
   max-width: 100%;
   height: 50%;
   background-repeat: no-repeat;
-  background-image: url(../images/adscolormodified.jpg);
+  background-image: url(images/adscolormodified.jpg);
   background-position: center;
   margin-top: 1%;
 }
@@ -32,7 +32,7 @@ header::before {
   width: 100%;
   height: 50%;
   background-repeat: no-repeat;
-  background-image: url(../images/resized5.png);
+  background-image: url(images/resized5.png);
   background-position: center;
   margin-top: -15%;
   margin-bottom: -13%;
@@ -52,7 +52,7 @@ header::after {
   width: 100%;
   height: 50%;
   background-repeat: no-repeat;
-  background-image: url(../images/resized5inverted.png);
+  background-image: url(images/resized5inverted.png);
   background-position: center;
   margin-top: -11%;
   margin-bottom: -12%;
@@ -79,11 +79,11 @@ h1::after {
   display: block;
   width: 100%;
   height: 45%;
-  background-image: url(../images/dottedonlineeditor.png);
+  background-image: url(images/dottedonlineeditor.png);
   background-repeat: no-repeat;
   background-position: center;
-  margin-top: -145px;
-  margin-bottom: -170px;
+  margin-top: -13%;
+  margin-bottom: -15%;
 }
 
 
@@ -103,11 +103,11 @@ h2::after {
   display: block;
   width: 100%;
   height: 45%;
-  background-image: url(../images/dottedonlineeditor.png);
+  background-image: url(images/dottedonlineeditor.png);
   background-repeat: no-repeat;
   background-position: center;
-  margin-top: -145px;
-  margin-bottom: -170px;
+  margin-top: -13%;
+  margin-bottom: -15%;
 }
 
 
@@ -129,11 +129,11 @@ h3::after {
   display: block;
   width: 100%;
   height: 45%;
-  background-image: url(../images/dottedonlineeditor.png);
+  background-image: url(images/dottedonlineeditor.png);
   background-repeat: no-repeat;
   background-position: center;
-  margin-top: -145px;
-  margin-bottom: -170px;
+  margin-top: -13%;
+  margin-bottom: -15%;
 }
 
 
@@ -192,7 +192,7 @@ figure::before {
   display: block;
   width: 100%;
   height: 5%;
-  background-image: url(../images/oneballless.png);
+  background-image: url(images/oneballless.png);
   background-repeat: no-repeat;
   background-position: center;
 
@@ -205,7 +205,7 @@ figure::after {
   display: block;
   width: 100%;
   height: 5%;
-  background-image: url(../images/oneballless.png);
+  background-image: url(images/oneballless.png);
   background-repeat: no-repeat;
   background-position: center;
 }
