--- a/style/home.css
+++ b/style/home.css
@@ -30,12 +30,12 @@ header{
 	background-color: #2F87BF;
 
 	color: white;
-
+	opacity: 0.5;
 }
 #content{
   width: 100%;
   height: 90%;
-	opacity: 0.5;
+	
 }
 
 ul{
@@ -47,6 +47,9 @@ ul{
 #menu ul li{
 	float: right;
 	transition: 0.5s;
+}
+#menu ul li a {
+transition: 0.5s;
 }
 #menu li a {
   display: block;
@@ -64,10 +67,11 @@ ul{
 
 /* Change the link color to #111 (black) on hover */
 #menu ul li a:hover {
-   background-color: #2B79AB;
+  
    cursor: pointer; 
    text-decoration: none;
    margin-top: 5px;
+	
 
 }
 /*.glyphicon 
