--- a/style/home.css
+++ b/style/home.css
@@ -5,8 +5,14 @@
 
 
 
+@media (min-width: 750px){
+	.col-sm-5 {
+		width: 80%;	
+	}
+}
 
-@media (min-width: 768px){ .col-sm-5{
+
+@media (min-width: 1000px){ .col-sm-5{
 		margin-left: 180px;
 		margin-top: 10px
 }
