--- a/style/XIXcenturystyle.css
+++ b/style/XIXcenturystyle.css
@@ -7,7 +7,7 @@
 @import url('https://fonts.googleapis.com/css?family=Sancreek&display=swap');
 
 body {
-  background-image: url(../images/background10.jpg);
+  background-image: url("images/background10.jpg");
   background-size: contain;
   margin-right: 5%;
   margin-left: 5%;
@@ -20,7 +20,7 @@ body::after {
   max-width: 100%;
   height: 50%;
   background-repeat: no-repeat;
-  background-image: url(../images/adscolormodified.jpg);
+  background-image: url(images/adscolormodified.jpg);
   background-position: center;
   margin-top: 1%;
 }
@@ -32,7 +32,7 @@ header::before {
   width: 100%;
   height: 50%;
   background-repeat: no-repeat;
-  background-image: url(../images/resized5.png);
+  background-image: url(images/resized5.png);
   background-position: center;
   margin-top: -15%;
   margin-bottom: -13%;
@@ -52,7 +52,7 @@ header::after {
   width: 100%;
   height: 50%;
   background-repeat: no-repeat;
-  background-image: url(../images/resized5inverted.png);
+  background-image: url(images/resized5inverted.png);
   background-position: center;
   margin-top: -11%;
   margin-bottom: -12%;
@@ -79,7 +79,7 @@ h1::after {
   display: block;
   width: 100%;
   height: 45%;
-  background-image: url(../images/dottedonlineeditor.png);
+  background-image: url(images/dottedonlineeditor.png);
   background-repeat: no-repeat;
   background-position: center;
   margin-top: -13%;
@@ -103,7 +103,7 @@ h2::after {
   display: block;
   width: 100%;
   height: 45%;
-  background-image: url(../images/dottedonlineeditor.png);
+  background-image: url(images/dottedonlineeditor.png);
   background-repeat: no-repeat;
   background-position: center;
   margin-top: -13%;
@@ -129,7 +129,7 @@ h3::after {
   display: block;
   width: 100%;
   height: 45%;
-  background-image: url(../images/dottedonlineeditor.png);
+  background-image: url(images/dottedonlineeditor.png);
   background-repeat: no-repeat;
   background-position: center;
   margin-top: -13%;
@@ -192,7 +192,7 @@ figure::before {
   display: block;
   width: 100%;
   height: 5%;
-  background-image: url(../images/oneballless.png);
+  background-image: url(images/oneballless.png);
   background-repeat: no-repeat;
   background-position: center;
 
@@ -205,7 +205,7 @@ figure::after {
   display: block;
   width: 100%;
   height: 5%;
-  background-image: url(../images/oneballless.png);
+  background-image: url(images/oneballless.png);
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -263,4 +263,117 @@ q {
 
 footer {    
 	font-style: italic;
+}
+
+/*my burden*/
+
+@media (max-width: 900px) {  /* to be applied if the screen is between 0 and 900 */
+  figure:before {
+    padding-top: 8%;
+  }
+  figure:after {
+    padding-top: 16%;
+  }
+  figure > figcaption {
+    font-size: 0.7rem;
+  }
+  figure > table {
+    margin: 5% auto;
+  }
+  ol {
+    margin: 0 0 5% 0;
+}
+  footer {
+    padding: 5% 0;
+  }
+  header:before {
+    width: 80vw;
+    margin-top: -37%;
+    margin-bottom: -20%;
+  }
+  header:after {
+    width: 80vw;
+    margin-top: -21%;
+    margin-bottom: -22%;
+    padding-top: -15vmin;
+  }
+  h1:after {
+    width: 100%;
+    margin-top: -21%;
+    margin-bottom: -22%;
+  }
+  h2:after {
+        width: 100%;
+    margin-top: -19%;
+    margin-bottom: -22%;
+  }
+  h3:after {
+        width: 100%;
+    margin-top: -19%;
+    margin-bottom: -22%;
+  }
+  figure:before {
+    width: 100%;
+    margin: 0;
+  }
+  figure:after {
+    width: 100%;
+    margin: 0;
+  }
+}
+
+
+@media (max-width: 500px) {  /* to be applied if the screen is between 0 and 500 */
+  figure:before {
+    padding-top: 8%;
+  }
+  figure:after {
+    padding-top: 16%;
+  }
+  figure > figcaption {
+    font-size: 0.7rem;
+  }
+  figure > table {
+    margin: 5% auto;
+  }
+  ol {
+    margin: 0 0 5% 0;
+}
+  footer {
+    padding: 5% 0;
+  }
+  header:before {
+    width: 80vw;
+    margin-top: -55%;
+    margin-bottom: -35%;
+  }
+  header:after {
+    width: 80vw;
+    margin-top: -38%;
+    margin-bottom: -40%;
+    padding-top: -15vmin;
+  }
+  h1:after {
+    width: 100%;
+    margin-top: -34%;
+    margin-bottom: -40%;
+  }
+  h2:after {
+    width: 100%;
+    margin-top: -35%;
+    margin-bottom: -40%;
+  }
+  h3:after {
+        width: 100%;
+    margin-top: -35%;
+    margin-bottom: -45%;
+  }
+  figure:before {
+    width: 100%;
+    margin: 0;
+  }
+  figure:after {
+    width: 100%;
+    margin: 0;
+  }
 }
