--- a/style/home.css
+++ b/style/home.css
@@ -3,11 +3,21 @@
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display=swap');
 
 
+@media (min-width: 800px){
+	div.col-sm-5 {
+		width: 30%;	
+	}
+}
+@media (min-width: 1000px){
+	div.col-sm-5 {
+		width: 30%;	
+	}
+}
 
 
 @media (min-width: 1200px){
 	div.col-sm-5 {
-		width: 80%;	
+		width: 40%;	
 	}
 }
 
