--- a/style/home.css
+++ b/style/home.css
@@ -6,13 +6,13 @@
 @media (min-width: 800px){
 	div.col-sm-5 {
 		width: 10%;
-		heigth: auto;
+		height: auto;
 	}
 }
 @media (min-width: 1000px){
 	div.col-sm-5 {
 		width: 20%;
-		heigth: auto;
+		height: auto;
 	}
 }
 
@@ -20,7 +20,7 @@
 @media (min-width: 1200px){
 	div.col-sm-5 {
 		width: 40%;
-		heigth: auto;
+		height: auto;
 	}
 }
 
