--- a/style/home.css
+++ b/style/home.css
@@ -2,6 +2,9 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display=swap');
 
+.open{
+	transition: 0.5s;
+}
 
 @media (min-width: 800px){
 	div.col-sm-5 {
@@ -51,7 +54,7 @@ header{
 	color: white;
 }
 
-div .col-sm-2 .btn .btn-primary {
+.btn-primary {
 	transition: 0.5s;
 }
 
