--- a/style/home.css
+++ b/style/home.css
@@ -8,15 +8,20 @@
 .open{
 	transition: 0.5s;
 }
+.dropdown-menu, .dropdown {
+	transition: 0.5s;
+}
+
 @media (min-width:500px){
 	div.col-sm-5{
 		margin-right:50px;
+		width:60%;
 	}
 }
 @media (min-width:600px){
-	.col-sm-2 .btn-sx{
+	.col-sm-2 #btn-sx{
 	margin-left:150px;}
-	.col-sm-2 .btn-dx{
+	.col-sm-2 #btn-dx{
 	float:right;
 		margin-right:150px;
 	}
@@ -27,9 +32,9 @@
 }
 
 @media (min-width: 800px){
-		.col-sm-2 .btn-sx{
+		.col-sm-2 #btn-sx{
 	margin-left:150px;}
-	.col-sm-2 .btn-dx{
+	.col-sm-2 #btn-dx{
 	float:right;
 		margin-right:150px;
 	}
