--- a/style/home.css
+++ b/style/home.css
@@ -14,16 +14,16 @@
 
 @media (min-width:500px){
 	div.col-sm-5{
-		margin-right:50px;
-		width:60%;
+		margin-right:50px !important;
+		width:60% !important;
 	}
 }
 @media (min-width:600px){
 	.col-sm-2 #btn-sx{
 	margin-left:150px;}
 	.col-sm-2 #btn-dx{
-	float:right;
-		margin-right:150px;
+	float:right !important;
+		margin-right:150px !important;
 	}
 	
 	div.col-sm-5 {
