--- a/style/home.css
+++ b/style/home.css
@@ -14,8 +14,8 @@
 
 @media (min-width:500px){
 	div.col-sm-5{
-		margin-right:50px !important;
-		width:60% !important;
+		margin-right:50px ;
+		width:60% ;
 	}
 }
 @media (min-width:600px){
