--- a/style/home.css
+++ b/style/home.css
@@ -147,7 +147,7 @@ transition: 0.5s;
    cursor: pointer; 
    text-decoration: none;
    margin-top: 5px;
-   font-size: 110%; 
+   margin-left: 5px; 
 	
 
 }
