--- a/style/home.css
+++ b/style/home.css
@@ -48,7 +48,7 @@
 	margin-left:0px;}
 	div#btn-dx.col-sm-2{
 			
-	float:left;
+	float:None;
 		margin-right:0px;
 	}
 	
@@ -62,7 +62,7 @@
 @media (min-width: 1200px){		div#btn-sx.col-sm-2{
 	margin-left:0px;}
 	div#btn-dx.col-sm-2{
-	float:left;
+	float:None;
 			
 		margin-right:0px;
 	}
@@ -76,7 +76,7 @@
 @media (min-width: 1400px){		div#btn-sx.col-sm-2{
 	margin-left:0px;}
 	div#btn-dx.col-sm-2{
-	float:left;
+	float:None;
 		
 		margin-right:0px;
 	} div.col-sm-5{
