--- a/style/home.css
+++ b/style/home.css
@@ -53,6 +53,7 @@
 	}
 	
 	div.col-sm-5 {
+		left: 200px;
 		width: 50%;
 		height: auto;
 	}
@@ -67,6 +68,7 @@
 		margin-right:0px;
 	}
 	div.col-sm-5 {
+		left: 200px;
 		width: 40%;
 		height: auto;
 	}
