--- a/style/home.css
+++ b/style/home.css
@@ -11,11 +11,19 @@
 .dropdown-menu, .dropdown {
 	transition: 0.5s;
 }
+@media (min-width:400px){
 
+		div#btn-dx.col-sm-2{
+	float:right;
+	}
+}
 @media (min-width:500px){
 	div.col-sm-5{
 		margin-right:50px ;
 		width:60% ;
+	}
+		div#btn-dx.col-sm-2{
+	float:right;
 	}
 }
 @media (min-width:600px){
