--- a/style/home.css
+++ b/style/home.css
@@ -12,7 +12,11 @@
 	transition: 0.5s;
 }
 @media (min-width:400px){
-
+	div.col-sm-5{
+		margin-right:50px ;
+		width:20% ;
+		float: right;
+	}
 		div#btn-dx.col-sm-2{
 	float:right;
 	}
@@ -25,6 +29,8 @@
 	}
 		div#btn-dx.col-sm-2{
 	float:left;
+	left: 50px;
+	top: 200px;
 	}
 }
 @media (min-width:600px){
