--- a/style/home.css
+++ b/style/home.css
@@ -50,11 +50,13 @@
 	float:right;
 		margin-right:150px;
 		bottom: 40px;
+		top:0px;
 	}
 	
 	div.col-sm-5 {
 		width: 80%;
 		left: 80px;
+		float:left;
 	}
 }
 
@@ -66,11 +68,13 @@
 		margin-right:150px;
 		bottom:0px;
 		left: 60px;
+		top:0px;
 	}
 	div.col-sm-5 {right:0px;
 		width: 80%;
 		height: auto;
 		left: 0;
+		float:left;
 	}
 }
 @media (min-width: 1000px){		div#btn-sx.col-sm-2{
@@ -79,12 +83,14 @@
 			bottom:0px;
 	float:right;
 		margin-right:0px;
+		top:0px;
 	}
 	
 	div.col-sm-5 {
 		left: 110px;
 		width: 50%;
 		height: auto;
+		float:left;
 	}
 }
 
@@ -95,11 +101,13 @@
 	float:right;
 			bottom:0px;
 		margin-right:0px;
+		top:0px;
 	}
 	div.col-sm-5 {
 		left: 120px;
 		width: 40%;
 		height: auto;
+		float:left;
 	}
 }
 
@@ -112,10 +120,12 @@
 		margin-right:0px;
 	} div.col-sm-5{
 		margin-left: 150px;
-		margin-top: 10px
+		margin-top: 10px;
+		float:left;
 }
 	div.col-sm-2 {
 		margin-top:15px;
+		top:0px;
 	}
 }
 html {
