--- a/style/home.css
+++ b/style/home.css
@@ -45,7 +45,8 @@
 
 	
 	div#btn-sx.col-sm-2{
-	margin-left:150px;}
+	margin-left:150px;
+	top:0px;}
 	div#btn-dx.col-sm-2{
 	float:right;
 		margin-right:150px;
@@ -62,7 +63,8 @@
 
 @media (min-width: 800px){
 		div#btn-sx.col-sm-2{
-	margin-left:150px;}
+	margin-left:150px;
+	top:0px;}
 	div#btn-dx.col-sm-2{
 	float:right;
 		margin-right:150px;
@@ -78,7 +80,8 @@
 	}
 }
 @media (min-width: 1000px){		div#btn-sx.col-sm-2{
-	margin-left:0px;}
+	margin-left:0px;
+	top:0px;}
 	div#btn-dx.col-sm-2{
 			bottom:0px;
 	float:right;
@@ -96,7 +99,9 @@
 
 
 @media (min-width: 1200px){		div#btn-sx.col-sm-2{
-	margin-left:0px;}
+	margin-left:0px;
+	top:0px;
+	}
 	div#btn-dx.col-sm-2{
 	float:right;
 			bottom:0px;
@@ -113,9 +118,11 @@
 
 
 @media (min-width: 1400px){		div#btn-sx.col-sm-2{
-	margin-left:0px;}
+	margin-left:0px;
+	top:0px;}
 	div#btn-dx.col-sm-2{
 	float:right;
+		top:0px;
 		bottom:0px;
 		margin-right:0px;
 	} div.col-sm-5{
