--- a/style/XIXcenturystyle.css
+++ b/style/XIXcenturystyle.css
@@ -272,7 +272,7 @@ footer {
     padding-top: 8%;
   }
   figure:after {
-    padding-top: 16%;
+    padding-top: 9%;
   }
   figure > figcaption {
     font-size: 0.7rem;
@@ -288,29 +288,28 @@ footer {
   }
   header:before {
     width: 80vw;
-    margin-top: -37%;
-    margin-bottom: -20%;
+    margin-top: -19%;
+    margin-bottom: -17%;
   }
   header:after {
     width: 80vw;
     margin-top: -21%;
     margin-bottom: -22%;
-    padding-top: -15vmin;
   }
   h1:after {
     width: 100%;
-    margin-top: -21%;
+    margin-top: -16%;
     margin-bottom: -22%;
   }
   h2:after {
-        width: 100%;
-    margin-top: -19%;
-    margin-bottom: -22%;
+    width: 100%;
+    margin-top: -16%;
+    margin-bottom: -20%;
   }
   h3:after {
         width: 100%;
     margin-top: -19%;
-    margin-bottom: -22%;
+    margin-bottom: -19%;
   }
   figure:before {
     width: 100%;
@@ -378,9 +377,9 @@ footer {
   }
 }
 
-@media only screen  and (min-width : 1224px) {
+@media only screen  and (min-width : 1224px) { /* this rule will be applied to desktop screen */
 	header:before {
-	margin-top: -12%;
+	margin-top: -13%;
 	margin-bottom: -9%;  }
 
 	figure:after {
@@ -397,9 +396,9 @@ footer {
 	margin-bottom: -13%;
 	}
 
-		h3:after {
-		margin-top: -10%;
-		margin-bottom: -13%;
+	h3:after {
+	margin-top: -10%;
+	margin-bottom: -13%;
 	}
 
 }
