--- a/style/XIXcenturystyle.css
+++ b/style/XIXcenturystyle.css
@@ -377,6 +377,61 @@ footer {
   }
 }
 
+@media (max-width: 700px) {  /* to be applied if the screen is between 0 and 500 */
+  figure:before {
+    padding-top: 22%;
+  }
+  figure:after {
+    padding-top: 20%;
+  }
+  figure > figcaption {
+    font-size: 0.7rem;
+  }
+  figure > table {
+    margin: 5% auto;
+  }
+  ol {
+    margin: 0 0 5% 0;
+}
+  footer {
+    padding: 5% 0;
+  }
+  header:before {
+    width: 80vw;
+    margin-top: -25%;
+    margin-bottom: -30%;
+  }
+  header:after {
+    width: 80vw;
+    margin-top: -20%;
+    margin-bottom: -25%;
+  }
+  h1:after {
+    width: 100%;
+    margin-top: -15%;
+    margin-bottom: -20%;
+  }
+  h2:after {
+    width: 100%;
+    margin-top: -20%;
+    margin-bottom: -23%;
+  }
+  h3:after {
+    width: 100%;
+    margin-top: -20%;
+    margin-bottom: -23%;
+  }
+  figure:before {
+    width: 100%;
+    margin: 0;
+  }
+  figure:after {
+    width: 100%;
+    margin: 0;
+  }
+}
+
+
 @media only screen  and (min-width : 1224px) { /* this rule will be applied to desktop screen */
 	header:before {
 	margin-top: -13%;
