--- a/style/ancient.css
+++ b/style/ancient.css
@@ -10,7 +10,7 @@
                 border-image-repeat: repeat;
                 margin-top: -125px;
                 margin-left: 5%;
-                background-color: #E7D1A2;
+                background-color: black;
             }
 main{
 	margin-left: 5%;
