--- a/style/slide.css
+++ b/style/slide.css
@@ -4,9 +4,19 @@ body{
             p{
                 display: none
             }
+          h1{
+                display: none;
+            }
+          h2{
+            display: none}
+          h3{
+            display: none}
             header{
                 display: none;
             }
+img{ display: none;
+}
+figcaption{display: none}
             figure{
                 display: none;
             }
