--- a/style/ancient.css
+++ b/style/ancient.css
@@ -11,6 +11,9 @@
                 margin-top: -125px;
                 margin-left: 5%;
                 background-image: url('../../images/old_paper.jpg')!important;
+	  	  background-position: center !important;
+  background-repeat: no-repeat !important;
+  background-size: cover !important;
             }
 main{
 	margin-left: 5%;
