--- a/style/slide.css
+++ b/style/slide.css
@@ -1,6 +1,9 @@
 body{
                 color: black;
                 background-image: url('../images/back.jpeg') !important;
+                background-position: center !important;
+                background-repeat: no-repeat !important;
+                background-size: cover !important;
             }
             p{
                 display: none
