--- a/style/slide.css
+++ b/style/slide.css
@@ -1,6 +1,6 @@
 body{
                 color: black;
-                background-image: url('../images/back.jpeg') !important;
+                background-image: url('../images/backF.jpg') !important;
                 background-position: center !important;
                 background-repeat: no-repeat !important;
                 background-size: cover !important;
