--- a/style/slide.css
+++ b/style/slide.css
@@ -1,6 +1,6 @@
 body{
                 color: black;
-                background-image: url('../images/backFut.jpeg') !important;
+                background-image: url('../images/backFut.jpg') !important;
 
             }
             p{
