--- a/style/slide.css
+++ b/style/slide.css
@@ -50,8 +50,7 @@ body{
                 background-color: black;
                 color: #4CC3EB;
             	font-family: 'Press Start 2P', cursive;
-                font-size: 17px;
-                line-height: 1.5;
+		font-size: 4vw;
                 text-align: center;
 
 
