--- a/style/ancient.css
+++ b/style/ancient.css
@@ -15,7 +15,7 @@
 p::first-letter {
   font-size: 6rem;
     font-family: 'UnifrakturMaguntia', cursive;
-    color: green;
+    color: red;
 }
   
          h1{
